# Music-Player

./: .gitignore  BuildAndRun.bat  CMakeLists.txt  Makefile.simple  README.md  RunMusicPlayer.bat  a.out  asound.conf  gen_wav  imgui.ini  package_release.sh  tmp_ffmpeg_test2.cpp
.git.bak/: config  index
.git.bak/logs/: HEAD
.git.bak/logs/refs/heads/: main
.git.bak/refs/heads/: main
src/: main.cpp  main_simple.cpp
src/audio/: audio_output.cpp  audio_output.h
src/decoder/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  wav_decoder.cpp  wav_decoder.h
src/player/: player.cpp  player.h
src/utils/: logger.cpp  logger.h
